--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   image_picker: ^0.8.4+4
   path: ^1.8.0
   multi_image_picker: ^4.8.01
+  cached_network_image: ^3.2.0
+  flutter_image_compress: ^1.1.0
 
 
 dev_dependencies:
